logs/object_cloud/build.make.053.log.stderr
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp: In function ‘void detections_cb(const ConstPtr&)’:
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:125:9: error: base operand of ‘->’ has non-pointer type ‘pclCloud {aka pcl::PointCloud<pcl::PointXYZRGB>}’
 if(cloud->is_dense){
         ^
make[2]: *** [CMakeFiles/object_cloud_node.dir/src/object_cloud_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/object_cloud_node.dir/all] Error 2
make: *** [all] Error 2
